--- a/06_using_functions_FS4B.ipynb
+++ b/06_using_functions_FS4B.ipynb
@@ -197,11 +197,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "e5e59b74",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Invalid input. Please enter a valid number.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "def calculate_square_root():\n",
+    "\n",
+    "    \n",
+    "    try:\n",
+    "        \n",
+    "        number = float(input(\"Enter a number to find the square root: \"))\n",
+    "\n",
+    "        if number < 0:\n",
+    "            print(\"Error: Cannot compute the square root of a negative number.\")\n",
+    "        else:\n",
+    "\n",
+    "            result = math.sqrt(number)\n",
+    "\n",
+    "            print(f\"The square root of {number} is {result:.2f}\")\n",
+    "\n",
+    "    except ValueError:\n",
+    "        print(\"Invalid input. Please enter a valid number.\")\n",
+    "\n",
+    "calculate_square_root()"
+   ]
   },
   {
    "cell_type": "code",
@@ -228,11 +258,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e531d580",
+   "execution_count": 11,
+   "id": "736821c0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean: 86.40\n",
+      "Median: 99.00\n",
+      "Standard Deviation: 19.35\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "import statistics\n",
+    "\n",
+    "def calculate_stats():\n",
+    "\n",
+    "    numbers = []\n",
+    "\n",
+    "    for i in range(5):\n",
+    "\n",
+    "        num = int(input(f\"Enter number {i+1}: \"))\n",
+    "\n",
+    "        if num>100:\n",
+    "            print(\"Number exceeds 100, please enter a valid number.\")\n",
+    "        else:\n",
+    "            numbers.append(num)\n",
+    "\n",
+    "    means = statistics.mean(numbers)\n",
+    "    medians = statistics.median(numbers)\n",
+    "    std_devs = statistics.stdev(numbers) \n",
+    "\n",
+    "    print(f\"Mean: {means:.2f}\")\n",
+    "    print(f\"Median: {medians:.2f}\")\n",
+    "    print(f\"Standard Deviation: {std_devs:.2f}\")\n",
+    "\n",
+    "calculate_stats()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -245,11 +311,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "cb7ee5fb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "String: 'Kazi' - Length Valid: False\n",
+      "String: 'LeedsBeckett' - Length Valid: True\n",
+      "String: 'University123' - Length Valid: False\n",
+      "String: 'PythonRocks' - Length Valid: True\n",
+      "String: 'CyberSec' - Length Valid: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def check_length(text):\n",
+    "    return 8 <= len(text) <= 12\n",
+    "\n",
+    "testing_strings = [\"Kazi\", \"LeedsBeckett\", \"University123\", \"PythonRocks\", \"CyberSec\"]\n",
+    "\n",
+    "for test in testing_strings:\n",
+    "\n",
+    "    result = check_length(test)\n",
+    "    print(f\"String: '{test}' - Length Valid: {result}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "da0417ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "check_length(\"NeverGiveUp\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -263,10 +373,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "e3005c03",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated Password: l8E[Tofx1w,c\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "import string\n",
+    "\n",
+    "\n",
+    "def generate_password(length):\n",
+    "\n",
+    "    characters = string.ascii_letters + string.digits + string.punctuation\n",
+    "\n",
+    "    password = \"\"\n",
+    "\n",
+    "    for i in range(length):\n",
+    "\n",
+    "        password += random.choice(characters)\n",
+    "\n",
+    "    return password\n",
+    "\n",
+    "password_length = int(input(\"Enter desired password length: \"))\n",
+    "generated_password = generate_password(password_length)\n",
+    "\n",
+    "print(f\"Generated Password: {generated_password}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "b6d3fd2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/S2'\n",
+      "#/Z)d..kWH@M\n",
+      "qObzD#\"u\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = generate_password(4)\n",
+    "b = generate_password(12)\n",
+    "c = generate_password(8)\n",
+    "\n",
+    "print(a)\n",
+    "print(b)\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1f64777",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated password: zdiG`O5v=GuW\n"
+     ]
+    }
+   ],
    "source": []
   },
   {
@@ -281,11 +462,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "489d8ea5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Text: 'Kazi', Character: 'k' - Found: False\n",
+      "Text: 'Leeds', Character: 'z' - Found: False\n",
+      "Text: 'Hello', Character: 'e' - Found: True\n",
+      "Text: 'World', Character: 'a' - Found: False\n",
+      "Text: 'Python', Character: 'P' - Found: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "def char_in_string(char, text):\n",
+    "\n",
+    "    return text.count(char) > 0 \n",
+    "\n",
+    "tests = [\n",
+    "\n",
+    "    (\"Kazi\", \"k\"),\n",
+    "    (\"Leeds\", \"z\"),\n",
+    "    (\"Hello\", \"e\"),\n",
+    "    (\"World\", \"a\"),\n",
+    "    (\"Python\", \"P\")\n",
+    "]\n",
+    "\n",
+    "for text, char in tests:\n",
+    "\n",
+    "    result = char_in_string(char, text)\n",
+    "\n",
+    "    print(f\"Text: '{text}', Character: '{char}' - Found: {result}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -301,11 +514,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "f5b81faf",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "String: 'Kazi' - Has Uppercase: True\n",
+      "String: 'leedsbeckett' - Has Uppercase: False\n",
+      "String: 'University123' - Has Uppercase: True\n",
+      "String: 'PythonRocks' - Has Uppercase: True\n",
+      "String: 'cybercec' - Has Uppercase: False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def has_uppercase(text):\n",
+    "    for char in text:\n",
+    "        if char.isupper():\n",
+    "            return True\n",
+    "    return False\n",
+    "\n",
+    "testing_strings = [\"Kazi\", \"leedsbeckett\", \"University123\", \"PythonRocks\", \"cybercec\"]\n",
+    "for test in testing_strings:\n",
+    "    result = has_uppercase(test)\n",
+    "    print(f\"String: '{test}' - Has Uppercase: {result}\")\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -317,11 +555,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "279e4730",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Password: 'Kazi' - Validity: False\n",
+      "Password: 'leedsbeckett@' - Validity: False\n",
+      "Password: 'University@123' - Validity: True\n",
+      "Password: 'pythonrocks' - Validity: False\n",
+      "Password: 'cybercecQL12@' - Validity: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def has_uppercase(text):\n",
+    "    return any(char.isupper() for char in text)\n",
+    "\n",
+    "def has_lowercase(text):\n",
+    "    return any(char.islower() for char in text)\n",
+    "\n",
+    "def has_digit(text):\n",
+    "    return any(char.isdigit() for char in text)\n",
+    "\n",
+    "def is_valid_password(password):\n",
+    "    return (has_uppercase(password) and\n",
+    "            has_lowercase(password) and\n",
+    "            has_digit(password))\n",
+    "\n",
+    "testing_passwords = [\"Kazi\", \"leedsbeckett@\", \"University@123\", \"pythonrocks\", \"cybercecQL12@\"]\n",
+    "\n",
+    "for password in testing_passwords:\n",
+    "\n",
+    "    result = is_valid_password(password)\n",
+    "\n",
+    "    print(f\"Password: '{password}' - Validity: {result}\")\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "1c8992cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Password: 'Kazi' is invalid.\n",
+      "Password: 'leedsbeckett@' is invalid.\n",
+      "Password: 'University@123' is valid.\n",
+      "Password: 'pythonrocks' is invalid.\n",
+      "Password: 'cybercecQL12@' is valid.\n"
+     ]
+    }
+   ],
+   "source": [
+    "for password in testing_passwords:\n",
+    "    result = is_valid_password(password)\n",
+    "    if is_valid_password(password):\n",
+    "        print(f\"Password: '{password}' is valid.\")\n",
+    "    else:\n",
+    "        print(f\"Password: '{password}' is invalid.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -333,11 +634,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "89fd9725",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Password: 'Kazi' - Length and Character Validity: False\n",
+      "Password: 'leedsbeckett@' - Length and Character Validity: False\n",
+      "Password: 'University@123' - Length and Character Validity: False\n",
+      "Password: 'pythonrocks' - Length and Character Validity: False\n",
+      "Password: 'cybercecQL12@' - Length and Character Validity: False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_valid_password_completed(password):\n",
+    "    return 8 <= len(password) <= 12 and has_uppercase(password) and has_lowercase(password) and has_digit(password)\n",
+    "\n",
+    "for p in testing_passwords:\n",
+    "    result = is_valid_password_completed(p)\n",
+    "    print(f\"Password: '{p}' - Length and Character Validity: {result}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -351,11 +671,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "ef3e3196",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing 10 randomly generated passwords:\n",
+      "Password 1: '3:'Tu<@YcvDu\"rc8v]' (length: 18) - INVALID\n",
+      "Password 2: '-1VECp$:(n/G*B@k@)' (length: 18) - INVALID\n",
+      "Password 3: '$v/cZ4(7f' (length: 9) - VALID\n",
+      "Password 4: '5GUtOi[waxb@~Yx' (length: 15) - INVALID\n",
+      "Password 5: 'NB8I[I9`n' (length: 9) - VALID\n",
+      "Password 6: 'duzX-k%G!mD#quBB&' (length: 17) - INVALID\n",
+      "Password 7: 'i<LPC7N>51' (length: 10) - VALID\n",
+      "Password 8: 'BUHWzDZg' (length: 8) - INVALID\n",
+      "Password 9: '5_qJ,`z_C(J' (length: 11) - VALID\n",
+      "Password 10: 'AOWV-|8E' (length: 8) - INVALID\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "def generate_random_password():\n",
+    "    length = random.randint(6, 18)\n",
+    "    characters = string.ascii_letters + string.digits + string.punctuation\n",
+    "    password = \"\"\n",
+    "    for i in range(length):\n",
+    "        password += random.choice(characters)\n",
+    "    return password\n",
+    "\n",
+    "print(\"Testing 10 randomly generated passwords:\")\n",
+    "for i in range(10):\n",
+    "    password = generate_random_password()\n",
+    "    is_valid = is_valid_password_completed(password)\n",
+    "    if is_valid:\n",
+    "        status = \"VALID\"\n",
+    "    else:\n",
+    "        status = \"INVALID\"\n",
+    "    print(f\"Password {i+1}: '{password}' (length: {len(password)}) - {status}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -406,7 +764,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -420,7 +778,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.4"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
