--- a/07_data_structures_FS4B.ipynb
+++ b/07_data_structures_FS4B.ipynb
@@ -159,11 +159,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e5e59b74",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Three unique random numbers (using set): [0, 1, 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "def unique_random_set():\n",
+    "    unique_numbers = set()\n",
+    "    while len(unique_numbers) < 3:\n",
+    "        unique_numbers.add(random.randint(0, 10))\n",
+    "    return list(unique_numbers)\n",
+    "\n",
+    "print(\"Three unique random numbers (using set):\", unique_random_set())\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -177,11 +195,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e531d580",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Three unique random numbers (using list): [8, 6, 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "def unique_random_list():\n",
+    "    unique_numbers = []\n",
+    "    while len(unique_numbers) < 3:\n",
+    "        num = random.randint(0, 10)\n",
+    "        if num not in unique_numbers:\n",
+    "            unique_numbers.append(num)\n",
+    "    return unique_numbers\n",
+    "\n",
+    "print(\"Three unique random numbers (using list):\", unique_random_list())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -195,11 +233,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e5f6a0ff",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique characters: {'m', 'b', ' ', 'k', 'u', 'l', 'n', 'a', 'i', 'z'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def unique_chars(text):\n",
+    "    unique_set = set(text)\n",
+    "    return unique_set\n",
+    "\n",
+    "text = input(\"Enter a string: \")\n",
+    "unique_chars_set = unique_chars(text)\n",
+    "print(\"Unique characters:\", unique_chars_set)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -212,11 +266,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "1100cb61",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter numbers (press Enter to finish):\n",
+      "Numbers in decreasing order: [98.0, 79.0, 78.0, 56.0, 44.0, 34.0, 34.0, 32.0, 12.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sort_numbers_decreasing():\n",
+    "    numbers = []\n",
+    "    print(\"Enter numbers (press Enter to finish):\")\n",
+    "    while True:\n",
+    "        entry = input()\n",
+    "        if entry == \"\":\n",
+    "            break\n",
+    "        numbers.append(float(entry))\n",
+    "    \n",
+    "    numbers.sort(reverse=True)\n",
+    "    return numbers\n",
+    "\n",
+    "result = sort_numbers_decreasing()\n",
+    "print(\"Numbers in decreasing order:\", result)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -228,11 +306,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "d9acdd78",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter strings (press Enter to finish):\n",
+      "Strings sorted by length: ['I am Kazi', 'Hello World', 'I love Programming', 'Leeds Beckett University']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sort_strings_by_length():\n",
+    "    strings = []\n",
+    "    print(\"Enter strings (press Enter to finish):\")\n",
+    "    while True:\n",
+    "        entry = input()\n",
+    "        if entry == \"\":\n",
+    "            break\n",
+    "        strings.append(entry)\n",
+    "    \n",
+    "    strings.sort(key=len)\n",
+    "    return strings\n",
+    "\n",
+    "result = sort_strings_by_length()\n",
+    "print(\"Strings sorted by length:\", result)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -246,11 +348,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "0901e205",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "User Information:\n",
+      "Name: Kazi\n",
+      "Age: 27\n",
+      "Email: kazifocp@gmail.com\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_user_info():\n",
+    "    name = input(\"Enter your name: \")\n",
+    "    age = input(\"Enter your age: \")\n",
+    "    email = input(\"Enter your email: \")\n",
+    "    return name, age, email  # This creates a tuple\n",
+    "\n",
+    "# Test program\n",
+    "user_info = get_user_info()\n",
+    "print(\"\\nUser Information:\")\n",
+    "print(f\"Name: {user_info[0]}\")\n",
+    "print(f\"Age: {user_info[1]}\")\n",
+    "print(f\"Email: {user_info[2]}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -266,11 +393,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "4b72b1c5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sentence is: I am Kazi, I love LBU\n",
+      "Letter counts:\n",
+      "a: 2\n",
+      "b: 1\n",
+      "e: 1\n",
+      "i: 3\n",
+      "k: 1\n",
+      "l: 2\n",
+      "m: 1\n",
+      "o: 1\n",
+      "u: 1\n",
+      "v: 1\n",
+      "z: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "from string import ascii_lowercase as letters\n",
+    "\n",
+    "def count_letters(sentence):\n",
+    "    counts = dict.fromkeys(letters, 0)\n",
+    "    \n",
+    "    for char in sentence.lower():\n",
+    "        if char in counts:\n",
+    "            counts[char] += 1\n",
+    "    \n",
+    "    return counts\n",
+    "\n",
+    "sentence = input(\"Enter a sentence: \")\n",
+    "letter_counts = count_letters(sentence)\n",
+    "\n",
+    "print(f\"The sentence is: {sentence}\")\n",
+    "print(\"Letter counts:\")\n",
+    "for letter, count in letter_counts.items():\n",
+    "    if count > 0:\n",
+    "        print(f\"{letter}: {count}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -284,11 +451,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "8d64d0aa",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sentence is: I am Kazi. I am 27 years of old. \n",
+      "Number of unique letters: 13\n"
+     ]
+    }
+   ],
+   "source": [
+    "def count_unique_letters(sentence):\n",
+    "    unique_letters = set()\n",
+    "    \n",
+    "    for char in sentence.lower():\n",
+    "        if char.isalpha():\n",
+    "            unique_letters.add(char)\n",
+    "    \n",
+    "    return len(unique_letters)\n",
+    "\n",
+    "sentence = input(\"Enter a sentence: \")\n",
+    "unique_count = count_unique_letters(sentence)\n",
+    "\n",
+    "print(f\"The sentence is: {sentence}\")\n",
+    "print(f\"Number of unique letters: {unique_count}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -309,11 +500,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "6c5d5178",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sentence is: I am Kazi. I live in Burley. My favourite sport is Cricket. Thanks for asking. \n",
+      "Longest word(s): ['favourite']\n"
+     ]
+    }
+   ],
+   "source": [
+    "from string import punctuation\n",
+    "\n",
+    "def find_longest_words(sentence):\n",
+    "    # Remove punctuation\n",
+    "    for symbol in punctuation:\n",
+    "        sentence = sentence.replace(symbol, '')\n",
+    "    \n",
+    "    words = sentence.split()\n",
+    "    if not words:\n",
+    "        return []\n",
+    "    \n",
+    "    # Find maximum length\n",
+    "    max_length = max(len(word) for word in words)\n",
+    "    \n",
+    "    # Find all words with maximum length\n",
+    "    longest_words = [word for word in words if len(word) == max_length]\n",
+    "    \n",
+    "    return longest_words\n",
+    "\n",
+    "sentence = input(\"Enter a sentence: \")\n",
+    "longest = find_longest_words(sentence)\n",
+    "\n",
+    "print(f\"The sentence is: {sentence}\")\n",
+    "print(f\"Longest word(s): {longest}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -328,11 +553,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "64d9fad2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data: [33, 12, 45, 7, 89, 23]\n",
+      "Range (max - min): 82\n"
+     ]
+    }
+   ],
+   "source": [
+    "def value_range(data_list):\n",
+    "    if not data_list:\n",
+    "        return 0\n",
+    "    return max(data_list) - min(data_list)\n",
+    "\n",
+    "data = [33, 12, 45, 7, 89, 23]\n",
+    "range_value = value_range(data)\n",
+    "\n",
+    "print(f\"Data: {data}\")\n",
+    "\n",
+    "print(f\"Range (max - min): {range_value}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -350,11 +596,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "98dafa68",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Primes under 100: [2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61, 67, 71, 73, 79, 83, 89, 97]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sieve_of_eratosthenes(limit):\n",
+    "    numbers = [True for n in range(limit + 1)]\n",
+    "    numbers[0] = numbers[1] = False  # 0 and 1 are not primes\n",
+    "    \n",
+    "    for i in range(2, int(limit**0.5) + 1):\n",
+    "        if numbers[i]:\n",
+    "            for j in range(i*i, limit + 1, i):\n",
+    "                numbers[j] = False\n",
+    "    \n",
+    "    primes = [i for i, is_prime in enumerate(numbers) if is_prime]\n",
+    "    return primes\n",
+    "\n",
+    "primes_under_100 = sieve_of_eratosthenes(100)\n",
+    "print(\"Primes under 100:\", primes_under_100)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -398,7 +667,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -412,7 +681,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
